k8s/deployment.yaml
{
  "apiVersion": "apps/v1",
  "kind": "Deployment",
  "metadata": {
    "name": "photo-organizer",
    "namespace": "photo-organizer"
  },
  "spec": {
    "progressDeadlineSeconds": 600,
    "replicas": 1,
    "revisionHistoryLimit": 10,
    "selector": {
      "matchLabels": {
        "app": "photo-organizer"
      }
    },
    "strategy": {
      "rollingUpdate": {
        "maxSurge": "25%",
        "maxUnavailable": "25%"
      },
      "type": "RollingUpdate"
    },
    "template": {
      "metadata": {
        "annotations": {},
        "labels": {
          "app": "photo-organizer"
        }
      },
      "spec": {
        "containers": [
          {
            "image": "caddy:2-alpine",
            "imagePullPolicy": "IfNotPresent",
            "name": "caddy",
            "ports": [
              {
                "containerPort": 80,
                "protocol": "TCP"
              }
            ],
            "resources": {
              "limits": {
                "cpu": "100m",
                "memory": "64Mi"
              },
              "requests": {
                "cpu": "10m",
                "memory": "32Mi"
              }
            },
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "volumeMounts": [
              {
                "mountPath": "/srv",
                "name": "html"
              },
              {
                "mountPath": "/etc/caddy/Caddyfile",
                "name": "caddyfile",
                "subPath": "Caddyfile"
              }
            ]
          }
        ],
        "dnsPolicy": "ClusterFirst",
        "restartPolicy": "Always",
        "schedulerName": "default-scheduler",
        "securityContext": {},
        "terminationGracePeriodSeconds": 30,
        "volumes": [
          {
            "hostPath": {
              "path": "/root/photo-organizer",
              "type": "Directory"
            },
            "name": "html"
          },
          {
            "configMap": {
              "defaultMode": 420,
              "name": "caddyfile"
            },
            "name": "caddyfile"
          }
        ]
      }
    }
  }
}
