k8s/service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "photo-organizer",
    "namespace": "photo-organizer"
  },
  "spec": {
    "ports": [
      {
        "port": 80,
        "protocol": "TCP",
        "targetPort": 80
      }
    ],
    "selector": {
      "app": "photo-organizer"
    },
    "type": "ClusterIP"
  }
}
