k8s/ingress.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": {
    "finalizers": [
      "strrl.dev/cloudflare-tunnel-ingress-controller-controlled"
    ],
    "name": "cloudflare-tunnel",
    "namespace": "photo-organizer"
  },
  "spec": {
    "ingressClassName": "cloudflare-tunnel",
    "rules": [
      {
        "host": "photo-organizer.526462738.xyz",
        "http": {
          "paths": [
            {
              "backend": {
                "service": {
                  "name": "photo-organizer",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/",
              "pathType": "Prefix"
            }
          ]
        }
      }
    ]
  }
}
